force-app/main/default/objects/Minimum_Wage_Config__mdt/Minimum_Wage_Config__mdt.object-meta.xml
<CustomObject>
    <label>Minimum Wage Config</label>
    <pluralLabel>Minimum Wage Configs</pluralLabel>
</CustomObject>