force-app/main/default/objects/Minimum_Wage_Config__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>