force-app/main/default/objects/Minimum_Wage_Config__mdt/fields/Min_Wage__c.field-meta.xml
<CustomField>
    <fullName>Min_Wage__c</fullName>
    <label>Min Wage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>