force-app/main/default/objects/Minimum_Wage_Config__mdt/fields/Min_Wage_Placement__c.field-meta.xml
<CustomField>
    <fullName>Min_Wage_Placement__c</fullName>
    <label>Min Wage Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>