force-app/main/default/objects/Minimum_Wage_Config__mdt/fields/Opco__c.field-meta.xml
<CustomField>
    <fullName>Opco__c</fullName>
    <label>Opco</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>