force-app/main/default/objects/Minimum_Wage_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>State__c</columns>
    <columns>Min_Wage__c</columns>
    <columns>Min_Wage_Placement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>